fix home hero img centering on mobile

--- a/src/components/pages/home/home.scss
+++ b/src/components/pages/home/home.scss
@@ -20,6 +20,7 @@
     width: 100%;
     height: 100%;
     background-image: url("../../../images/coding.jpg");
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 
